--- a/newapp/public/index.html
+++ b/newapp/public/index.html
@@ -6,8 +6,8 @@
   <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="theme-color" content="#000000" />
-  <meta property="og:title" content='Spin 3D'>
-  <meta property="og:site_name" content='Spin 3D'>
+  <meta property="og:title" content='BigFlix'>
+  <meta property="og:site_name" content='BigFlix'>
   <meta property="og:image" content="https://th.bing.com/th/id/OIG.EAh1DRatEtfxGR5oxvlG?pid=ImgGn">
   <meta name="description" content="A Movie Search Webapp" />
   <link rel="apple-touch-icon" sizes="180x180" href="%PUBLIC_URL%/apple-touch-icon.png">
